--- a/worldcup/website/templates/show-match.html
+++ b/worldcup/website/templates/show-match.html
@@ -1,103 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<style type="text/css">
-input[type=radio] {
-    display:none;
-}
 
-input[type=radio] + label {
-    display:inline-block;
-    margin:-2px;
-    padding: 4px 12px;
-    margin-bottom: 0;
-    font-size: 14px;
-    line-height: 20px;
-    color: #333;
-    text-align: center;
-    text-shadow: 0 1px 1px rgba(255,255,255,0.75);
-    vertical-align: middle;
-    cursor: pointer;
-    background-color: #f5f5f5;
-    background-image: -moz-linear-gradient(top,#fff,#e6e6e6);
-    background-image: -webkit-gradient(linear,0 0,0 100%,from(#fff),to(#e6e6e6));
-    background-image: -webkit-linear-gradient(top,#fff,#e6e6e6);
-    background-image: -o-linear-gradient(top,#fff,#e6e6e6);
-    background-image: linear-gradient(to bottom,#fff,#e6e6e6);
-    background-repeat: repeat-x;
-    border: 1px solid #ccc;
-    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
-    border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
-    border-bottom-color: #b3b3b3;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff',endColorstr='#ffe6e6e6',GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-    -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-    -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-    box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-}
-
-input[type=radio]:checked + label {
-       background-image: none;
-    outline: 0;
-    -webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-    -moz-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-    box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-        background-color:#e0e0e0;
-}
-        </style>
-<style type="text/css">
-.star {
-     width:29px;
-     height: 29px;
-     background-image:url({{ STATIC_URL }}star_blank.png);
-     float:left;
-}
-
-.on {
-     background-image:url({{ STATIC_URL }}star_overs.png);
-}
-
-.rated > .rating {
-     background-image:url({{ STATIC_URL }}star_voted.png);
-}
-            </style>
-    <script type="text/javascript" src="{{ STATIC_URL }}jquery-1.4.js"></script>
-    <script type="text/javascript">
-      $(function() {
-        $('.star').click(function(){
-          $(this).addClass('on rating');
-          $(this).prevAll().addClass('on rating');
-          $(this).nextAll().removeClass('on rating');
-          //    How to select the parent div of 'this'?
-          $(this).parent().addClass('rated');
-          var player_id = $(this).parent().attr('id');
-          var rating = $(this).siblings().add(this).filter('.rating').length;
-
-          $.post("/rate/", {rating: rating, player_id: player_id, match_id:"{{match.id}}"},
-            function(data) {
-                $('#alert-message')[0].innerHTML = '<span>'+data+'</span>';
-                setTimeout(function() {
-                    window.location.reload(true);
-                }, 1500);
-            }
-         );
-        });
-      });
-
-      $(function() {
-        $('.star').hover(
-          function(){
-            $(this).addClass('on');
-            $(this).prevAll().addClass('on');
-            $(this).nextAll().removeClass('on');
-          },
-          function(){
-            $(this).siblings().add(this).removeClass('on');
-            $(this).siblings().add(this).filter('.rating').addClass('on');
-          }
-        );
-      });
-    </script>
+<script type="text/javascript" src="{{ STATIC_URL }}jquery-1.4.js"></script>
+{% include "rating.html" %}
 <script type="text/javascript">
    function sendBet(){
        if ($('[name="radios"]:checked').length != 0) {
