--- a/worldcup/website/templates/login.html
+++ b/worldcup/website/templates/login.html
@@ -1,11 +1,36 @@
 {% extends 'base.html' %}
 {% block content %}
-<form method="POST">
+            <nav>
+                <ul class="nav nav-pills">
+                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="{% url 'teams' %}">Teams</a></li>
+                    <li><a href="{% url 'matches' %}">Matches</a></li>
+                    <li><a href="{% url 'players' %}">Players</a></li>
+                    <li><a href="{% url 'ranking' %}">Rank list</a></li>
+                 {% if user.is_authenticated %}
+                 <li><a href="{% url 'logout' %}">Logout</a></li>
+                 <li><a href="{% url 'my-profile' %}">My profile</a></li>
+                 {% else %}
+                 <li><a href="{% url 'login' %}">Login</a></li>
+                 <li><a href="{% url 'register' %}">Register</a></li>
+                 {% endif %}
+                </ul>
+            </nav>
+            <hr>
+
+{% if user.is_authenticated %}
+    <p>Welcome, {{ user.username }}. You are logged in!</p>
+{% else %}
+    <p>Welcome, Guest. Please log in.</p>
+        <form method="POST">
 {% csrf_token %}
 {{ form.as_p }}
-
-<button type="submit" class="button-submit">Login</button>
+<hr>
+<button type="submit" class="btn btn-primary">Login</button>
 </form>
+{% endif %}
+
+
 
 
 {% endblock %}
