--- a/worldcup/website/templates/players.html
+++ b/worldcup/website/templates/players.html
@@ -1,12 +1,71 @@
 {% extends 'base.html' %}
-
 {% block content %}
-All-players:
-    <hr>
-    {% for player in players %}
-    <article>
-        <h3><a href="{% url 'show-player' player.id %}">{{ player.name }}</a></h3>
-        <hr>
-    </article>
+            <nav>
+                <ul class="nav nav-pills">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="{% url 'teams' %}">Teams</a></li>
+                    <li><a href="{% url 'matches' %}">Matches</a></li>
+                    <li class="active"><a href="{% url 'players' %}">Players</a></li>
+                    <li><a href="{% url 'ranking' %}">Rank list</a></li>
+                 {% if user.is_authenticated %}
+                 <li><a href="{% url 'logout' %}">Logout</a></li>
+                 <li><a href="{% url 'my-profile' %}">My profile</a></li>
+
+                 {% else %}
+                 <li><a href="{% url 'login' %}">Login</a></li>
+                 <li><a href="{% url 'register' %}">Register</a></li>
+                 {% endif %}
+                </ul>
+            </nav>
+            <hr>
+
+{% if user.is_authenticated %}
+    <p>Welcome, {{ user.username }}. Thanks for logging in.</p>
+{% else %}
+    <p>Welcome, Guest. Please log in.</p>
+{% endif %}
+<hr>
+
+    {% for team, players in team_players.items %}
+    <center><h2><a style="text-decoration:none;" href="/team/{{ team.id }}">
+        <span class="label label-primary">{{ team }}</span></a></h2></center>
+    <table class="table table-striped table-hover ">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Name</th>
+      <th>Age</th>
+      <th>Position</th>
+    </tr>
+  </thead>
+  <tbody>
+        {% for player in players %}
+
+        <tr style="cursor:pointer;" onclick="location.href='player/{{player.id}}'">
+
+      <td>{{ player.number }}</td>
+      <td>
+           {{ player.name }}
+      </td>
+      <td>{{ player.age }}</td>
+        <td>
+      {% if player.position == "GK" %}
+        Goalkeeper
+        {% elif player.position == "DF" %}
+        Defender
+        {% elif player.position == "MF" %}
+        Midfielder
+        {% elif player.position == "FW" %}
+        Forward
+      {% endif %}
+      </td>
+
+        </tr>
+
+        {% endfor %}
+</tbody>
+</table>
     {% endfor %}
+
+
 {% endblock %}
