--- a/worldcup/website/templates/rating.html
+++ b/worldcup/website/templates/rating.html
@@ -15,15 +15,15 @@ input[type=radio] + label {
     text-shadow: 0 1px 1px rgba(255,255,255,0.75);
     vertical-align: middle;
     cursor: pointer;
-    background-color: #f5f5f5;
-    background-image: -moz-linear-gradient(top,#fff,#e6e6e6);
-    background-image: -webkit-gradient(linear,0 0,0 100%,from(#fff),to(#e6e6e6));
-    background-image: -webkit-linear-gradient(top,#fff,#e6e6e6);
-    background-image: -o-linear-gradient(top,#fff,#e6e6e6);
-    background-image: linear-gradient(to bottom,#fff,#e6e6e6);
+    background-color: #f9ad57;
+    background-image: -moz-linear-gradient(top,#f9ad57,#ffaa03);
+    background-image: -webkit-gradient(linear,0 0,0 100%,from(#f9ad57),to(#ffaa03));
+    background-image: -webkit-linear-gradient(top,#f9ad57,#ffaa03);
+    background-image: -o-linear-gradient(top,#f9ad57,#ffaa03);
+    background-image: linear-gradient(to bottom,#f9ad57,#ffaa03);
     background-repeat: repeat-x;
     border: 1px solid #ccc;
-    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+    border-color: #fb4300 #fb4300 #bfbfbf;
     border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
     border-bottom-color: #b3b3b3;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff',endColorstr='#ffe6e6e6',GradientType=0);
