--- a/worldcup/website/templates/show-team.html
+++ b/worldcup/website/templates/show-team.html
@@ -1,9 +1,41 @@
 {% extends 'base.html' %}
-
 {% block content %}
+            <nav>
+                <ul class="nav nav-pills">
+                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="{% url 'teams' %}">Teams</a></li>
+                    <li><a href="{% url 'matches' %}">Matches</a></li>
+                    <li><a href="{% url 'players' %}">Players</a></li>
+                 {% if user.is_authenticated %}
+                 <li><a href="{% url 'logout' %}">Logout</a></li>
+                 <li><a href="{% url 'my-profile' %}">My profile</a></li>
+                 <li><a href="{% url 'ranking' %}">Rank list</a></li>
+                 {% else %}
+                 <li><a href="{% url 'login' %}">Login</a></li>
+                 <li><a href="{% url 'register' %}">Register</a></li>
+                 {% endif %}
+                </ul>
+            </nav>
+            <hr>
 
-<h3>{{ team.name }}</h3>
-<h3>{{ team.group }}</h3>
-<p>{{ team.info }}</p>
+{% if user.is_authenticated %}
+    <p>Welcome, {{ user.username }}. Thanks for logging in.</p>
+{% else %}
+    <p>Welcome, Guest. Please log in.</p>
+{% endif %}
+<hr>
+
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h3 class="panel-title">{{ team.name }}</h3>
+  </div>
+  <div class="panel-body">
+    {{ team.info }}
+  </div>
+</div>
+
 
 {% endblock %}
+
+
+
