--- a/worldcup/website/templates/login.html
+++ b/worldcup/website/templates/login.html
@@ -2,7 +2,7 @@
 {% block content %}
             <nav>
                 <ul class="nav nav-pills">
-                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="{% url 'teams' %}">Teams</a></li>
                     <li><a href="{% url 'matches' %}">Matches</a></li>
                     <li><a href="{% url 'players' %}">Players</a></li>
@@ -11,7 +11,7 @@
                  <li><a href="{% url 'logout' %}">Logout</a></li>
                  <li><a href="{% url 'my-profile' %}">My profile</a></li>
                  {% else %}
-                 <li><a href="{% url 'login' %}">Login</a></li>
+                 <li class="active"><a href="{% url 'login' %}">Login</a></li>
                  <li><a href="{% url 'register' %}">Register</a></li>
                  {% endif %}
                 </ul>
